--- a/.gitignore
+++ b/.gitignore
@@ -15,27 +15,28 @@
 # Production
 /build
 
-# Misc
-.DS_Store
-*.pem
-
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Local Env Files
+# Local development
 .env
 .env*.local
-.env.development
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode
-.idea
+# IDEs and editors
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Miscellaneous
+.DS_Store
+*.pem
