--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "node": "20"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
+    "@genkit-ai/firebase": "^1.16.0",
+    "@genkit-ai/googleai": "^1.16.0",
+    "@genkit-ai/next": "^1.16.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -44,7 +45,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "genkit": "^1.14.1",
+    "genkit": "^1.16.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
@@ -64,7 +65,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "dotenv-cli": "^7.4.2",
-    "genkit-cli": "^1.14.1",
+    "genkit-cli": "^1.16.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
