--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "@types/node": "^20"
+    "@types/node": "^20",
+    "tsx": "^4.16.2"
   }
 }
